User get profile implemented and manually tested
